--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,5 @@
 default: &default
-  adapter: mysql2
+  adapter: postgresql
 
 development:
   <<: *default
@@ -9,8 +9,8 @@ development:
 
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: nano_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: nano_production
